--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "d3": "^6.7.0",
+    "plotly.js-dist-min": "^2.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -33,6 +34,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   },
